; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/sctp/extr_chunk.c_sctp_chunk_fail.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/sctp/extr_chunk.c_sctp_chunk_fail.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sctp_chunk = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sctp_chunk_fail(%struct.sctp_chunk* %0, i32 %1) #0 {
  %3 = alloca %struct.sctp_chunk*, align 8
  %4 = alloca i32, align 4
  store %struct.sctp_chunk* %0, %struct.sctp_chunk** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.sctp_chunk*, %struct.sctp_chunk** %3, align 8
  %6 = getelementptr inbounds %struct.sctp_chunk, %struct.sctp_chunk* %5, i32 0, i32 0
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  store i32 1, i32* %8, align 4
  %9 = load i32, i32* %4, align 4
  %10 = load %struct.sctp_chunk*, %struct.sctp_chunk** %3, align 8
  %11 = getelementptr inbounds %struct.sctp_chunk, %struct.sctp_chunk* %10, i32 0, i32 0
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 1
  store i32 %9, i32* %13, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
